# docker_homework

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/fixtures/: courses.json  lessons.json
materials/management/commands/: fill_materials.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_description.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_alter_subscription_options_and_more.py
users/: models.py  permissions.py  serializers.py  serivces.py  urls.py  views.py
users/fixtures/: users.json
users/management/commands/: csu.py  cu.py  fill_payments.py  fill_users.py
users/migrations/: 0001_initial.py  0002_alter_user_telephone.py  0003_payment.py  0004_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0005_payment_link_payment_session_id.py  0006_payment_status_alter_payment_amount_and_more.py  0007_rename_user_payment_owner.py
